fix nav overlap

--- a/src/assets/css/components/_color-hero.scss
+++ b/src/assets/css/components/_color-hero.scss
@@ -79,7 +79,7 @@
 .color-hero__container {
   display: flex;
   position: relative;
-  padding: 10% 0 5%;
+  padding: 20% 0 5%;
 }
 
 .color-hero__text {
