--- a/src/assets/css/components/_nav.scss
+++ b/src/assets/css/components/_nav.scss
@@ -1,6 +1,6 @@
 .nav {
   position: absolute;
-  margin: 0 auto;;
+  margin: 0 auto;
   width: 100%;
   z-index: 1;
   color: var(--color-white);
